2 commit de washington guardianship

--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
     </div>
 
     <div class="btn-group">
+      <button type="button" class="btn btn-secondary">Where to filed?</button>
+      <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
+      </button>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="#">Pierce County</a>
+        <a class="dropdown-item" href="#">King County</a>
+      </div>
+    </div>
+
+    <div class="btn-group">
       <button type="button" class="btn btn-secondary">What process you want to know?</button>
       <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
       </button>
@@ -70,6 +80,24 @@
   <main>
     <section id="intro">
       <h2>Welcome to our educational website!</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu justo ut orci congue mattis. In convallis tempus dui, vel finibus justo scelerisque id. Mauris sollicitudin dapibus felis, nec rhoncus libero commodo et. Sed id tortor in metus sollicitudin mattis. Nunc scelerisque urna mauris, in fringilla turpis congue sed.</p>
+    </section>
+
+    <section id="what?">
+      <h2>Do you need a Guardian or a Conservator or both?</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu justo ut orci congue mattis. In convallis tempus dui, vel finibus justo scelerisque id. Mauris sollicitudin dapibus felis, nec rhoncus libero commodo et. Sed id tortor in metus sollicitudin mattis. Nunc scelerisque urna mauris, in fringilla turpis congue sed.</p>
+    </section>
+
+    <section id="what?">
+      <h2>What is the procedure?</h2>
+      <ul>
+        <li>?</li>
+        <li>?</li>
+      </ul>
+    </section>
+
+    <section id="what?">
+      <h2>What is your 90 day obligation?</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu justo ut orci congue mattis. In convallis tempus dui, vel finibus justo scelerisque id. Mauris sollicitudin dapibus felis, nec rhoncus libero commodo et. Sed id tortor in metus sollicitudin mattis. Nunc scelerisque urna mauris, in fringilla turpis congue sed.</p>
     </section>
 
