Secciones informativas de procesos

--- a/index.html
+++ b/index.html
@@ -76,6 +76,16 @@
         <a class="dropdown-item" href="#">Guardianship/probate</a>
       </div>
     </div>
+
+    <div class="btn-group">
+      <button type="button" class="btn btn-secondary">Additional information</button>
+      <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
+      </button>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="#"></a>
+        <a class="dropdown-item" href="#"></a>
+      </div>
+    </div>
   
   <main>
     <section id="intro">
@@ -86,6 +96,70 @@
     <section id="what?">
       <h2>Do you need a Guardian or a Conservator or both?</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu justo ut orci congue mattis. In convallis tempus dui, vel finibus justo scelerisque id. Mauris sollicitudin dapibus felis, nec rhoncus libero commodo et. Sed id tortor in metus sollicitudin mattis. Nunc scelerisque urna mauris, in fringilla turpis congue sed.</p>
+    </section>
+
+    <section id="what?">
+      <h2>How do you petition?</h2>
+      <p>Guardianship</p>
+      <ul>
+          <li> <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.270#:~:text=(1)%20A%20person%20interested%20in,a%20guardian%20for%20the%20adult.&text=(j)%20Whether%20the%20respondent%20needs,court%20or%20understand%20court%20proceedings.">11.130.270</a></li>
+            <li>
+              <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.275">11.130.275 </a>
+            </li>
+      </ul>
+
+      <p>Conservatorship</p>
+      <ul>
+          <li>
+            <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.360">11.130.360</a>
+          </li>
+          <li>
+            <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.365">11.130.365</a>
+          </li>
+          <li>
+            <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.370">11.130.370</a>
+          </li>
+      </ul>
+    </section>
+
+    <section id="what?">
+      <h2>How do you get appointed?</h2>
+      <p>Guardianship</p>
+      <ul>
+        <li>
+          <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.280">11.130.280</a>
+        </li>
+        <li>
+          <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.285">11.130.285</a>
+        </li>
+      </ul>
+
+      <p>Conservatorship</p>
+      <ul>
+        <li>
+          <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.380">11.130.380</a>
+        </li>
+        <li>
+          <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.385">11.130.385</a>
+        </li>
+      </ul>
+    </section>
+
+    <section id="">
+      <h2>What happens when youre appointed?</h2>
+      <p>Guardianship</p>
+      <ul>
+        <li>
+
+        </li>
+      </ul>
+
+      <p>Conservatorship</p>
+      <ul>
+        <li>
+          
+        </li>
+      </ul>
     </section>
 
     <section id="what?">
