--- a/index.html
+++ b/index.html
@@ -102,22 +102,22 @@
       <h2>How do you petition?</h2>
       <p>Guardianship</p>
       <ul>
-          <li> <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.270#:~:text=(1)%20A%20person%20interested%20in,a%20guardian%20for%20the%20adult.&text=(j)%20Whether%20the%20respondent%20needs,court%20or%20understand%20court%20proceedings.">11.130.270</a></li>
+          <li> <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.270#:~:text=(1)%20A%20person%20interested%20in,a%20guardian%20for%20the%20adult.&text=(j)%20Whether%20the%20respondent%20needs,court%20or%20understand%20court%20proceedings.">Petition for appointment of guardian for adult...11.130.270</a></li>
             <li>
-              <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.275">11.130.275 </a>
+              <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.275">Notice of hearing for appointment of guardian for adult... 11.130.275 </a>
             </li>
       </ul>
 
       <p>Conservatorship</p>
       <ul>
           <li>
-            <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.360">11.130.360</a>
+            <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.360">Basis for appointment of conservator... 11.130.360</a>
           </li>
           <li>
-            <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.365">11.130.365</a>
+            <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.365">Petition for appointment of conservator... 11.130.365</a>
           </li>
           <li>
-            <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.370">11.130.370</a>
+            <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.370">Notice and hearing for appointment of conservator... 11.130.370</a>
           </li>
       </ul>
     </section>
@@ -127,37 +127,37 @@
       <p>Guardianship</p>
       <ul>
         <li>
-          <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.280">11.130.280</a>
+          <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.280">Appointment and role of court visitor... 11.130.280</a>
         </li>
         <li>
-          <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.285">11.130.285</a>
+          <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.285">Appointment and role of attorney for adult... 11.130.285</a>
         </li>
       </ul>
 
       <p>Conservatorship</p>
       <ul>
         <li>
-          <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.380">11.130.380</a>
+          <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.380">Appointment and role of court visitor... 11.130.380</a>
         </li>
         <li>
-          <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.385">11.130.385</a>
+          <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.385">Appointment and role of attorney... 11.130.385</a>
         </li>
       </ul>
     </section>
 
     <section id="">
-      <h2>What happens when youre appointed?</h2>
+      <h2>What happens when you're appointed?</h2>
       <p>Guardianship</p>
       <ul>
         <li>
-
+          <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.310">Order of appointment for guardian... 11.130.310</a>
         </li>
       </ul>
 
       <p>Conservatorship</p>
       <ul>
         <li>
-          
+          <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.420">Order of appointment of conservator... 11.130.420</a>
         </li>
       </ul>
     </section>
@@ -170,6 +170,11 @@
       </ul>
     </section>
 
+    <section>
+      <h5>to review your case in Pierce County go to</h5>
+      <a href="https://linxonline.co.pierce.wa.us/linxweb/Account/Logon.cfm?logon_referer=%2Flinxweb%2FMain%2Ecfm%3F">"https://linxonline.co.pierce.wa.us/linxweb/Account/Logon.cfm?logon_referer=%2Flinxweb%2FMain%2Ecfm%3F"</a>
+    </section>
+
     <section id="what?">
       <h2>What is your 90 day obligation?</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu justo ut orci congue mattis. In convallis tempus dui, vel finibus justo scelerisque id. Mauris sollicitudin dapibus felis, nec rhoncus libero commodo et. Sed id tortor in metus sollicitudin mattis. Nunc scelerisque urna mauris, in fringilla turpis congue sed.</p>
@@ -180,6 +185,8 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu justo ut orci congue mattis. In convallis tempus dui, vel finibus justo scelerisque id. Mauris sollicitudin dapibus felis, nec rhoncus libero commodo et. Sed id tortor in metus sollicitudin mattis. Nunc scelerisque urna mauris, in fringilla turpis congue sed.</p>
       <!-- Add more content as needed -->
     </section>
+
+   
   </main>
 
   <footer>
