--- a/index.html
+++ b/index.html
@@ -103,13 +103,94 @@
       <p>El guardianship es una figura legal que permite a una persona adulta, conocida como guardián, cuidar y tomar decisiones en nombre de un menor de edad o de una persona adulta con discapacidad.</p>
       <p>El guardián tiene la responsabilidad de velar por el bienestar físico, emocional y legal de la persona bajo guardianship.</p>
     </div>
+
+    <div class="container">
+      <h2>How to Petition</h2>
+      <div class="card-deck card-columns" style="width:900px">
+            <div class="card bg-warning">
+              <div class="card-body text-center">
+                <img class="card-img-top" src="images/how to petition.jpeg" alt="Card image" width="300" height="200">
+                <h4 class="card-title">Petition for appointment of guardian for adult.</h4>
+                <p class="card-text">11.130.270.</p>
+                <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.270#:~:text=(1)%20A%20person%20interested%20in,a%20guardian%20for%20the%20adult.&text=(j)%20Whether%20the%20respondent%20needs,court%20or%20understand%20court%20proceedings." class="btn btn-primary stretched-link">Click here</a>
+              </div>
+            </div>
+
+            <div class="card bg-warning">
+              <div class="card-body text-center">
+                <img class="card-img-top" src="images/how to petition.jpeg" alt="Card image" width="300" height="200">
+                <h4 class="card-title">Notice of hearing for appointment of guardian for adult.</h4>
+                <p class="card-text">11.130.275</p>
+                <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.275" class="btn btn-primary stretched-link">Click here</a>
+              </div>
+            </div>
+      </div>
+    </div>
     
-    <ul>
-      <li> <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.270#:~:text=(1)%20A%20person%20interested%20in,a%20guardian%20for%20the%20adult.&text=(j)%20Whether%20the%20respondent%20needs,court%20or%20understand%20court%20proceedings.">Petition for appointment of guardian for adult...11.130.270</a></li>
-        <li>
-          <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.275">Notice of hearing for appointment of guardian for adult... 11.130.275 </a>
-        </li>
-    </ul>
+   <div class="container">
+      <h2>How do you get appointed?</h2>
+      <div class="card-deck card-columns" style="width: 900px;">
+          <div class="card bg-warning">
+            <div class="card-body text-center">
+              <img class="card-img-top" src="images/appointed.jpeg" alt="Card image" width="300" height="200">
+              <h4 class="card-title">Appointment and role of court visitor.</h4>
+              <p class="card-text">11.130.280.</p>
+              <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.280" class="btn btn-primary stretched-link">Click here</a>
+            </div>
+          </div>
+
+          <div class="card bg-warning">
+            <div class="card-body text-center">
+              <img class="card-img-top" src="images/appointed.jpeg" alt="Card image" width="300" height="200">
+              <h4 class="card-title">Appointment and role of attorney for adult.</h4>
+              <p class="card-text">11.130.285.</p>
+              <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.285" class="btn btn-primary stretched-link">Click here</a>
+            </div>
+          </div>
+      </div>
+   </div>
+
+   <div class="container">
+      <h2>What happens when you're appointed?</h2>
+      <div class="card-deck card-columns" style="width: 500px;">
+        <div class="card bg-warning">
+          <div class="card-body text-center">
+            <img class="card-img-top" src="images/what happens.jpeg" alt="Card image" width="300" height="200">
+            <h4 class="card-title">Order of appointment for guardian.</h4>
+            <p class="card-text"> 11.130.310.</p>
+            <a href="https://app.leg.wa.gov/RCW/default.aspx?cite=11.130.310" class="btn btn-primary stretched-link">Click here</a>
+
+          </div>
+
+        </div>
+
+      </div>
+   </div>
+
+  <div class="container">
+    <h2>Forms</h2>
+      <div class="card-deck card-columns" style="width: 900px;">
+        <div class="card bg-warning">
+          <div class="card-body text-center">
+            <div class="pdf-section" onclick="openPDF()">
+              <h2>Notice of Filing</h2>
+              <p>View of the pdf file.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card bg-warning">
+          <div class="card-body text-center">
+            <div class="pdf-section" onclick="openPDF2()">
+              <h2>Notice of Hearing</h2>
+              <p>View of the pdf file.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+   
+
   </section>
   
 
