--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <div class="card bg-warning">
           <div class="card-body text-center">
             <div class="pdf-section" onclick="openPDF()">
-              <h2>Notice of Filing</h2>
+              <h2>Notice of Filing a Plan</h2>
               <p>View of the pdf file.</p>
             </div>
           </div>
@@ -183,6 +183,15 @@
           <div class="card-body text-center">
             <div class="pdf-section" onclick="openPDF2()">
               <h2>Notice of Hearing</h2>
+              <p>View of the pdf file.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card bg-warning">
+          <div class="card-body text-center">
+            <div class="pdf-section" onclick="openPDF3()">
+              <h2>90 day Checklist case</h2>
               <p>View of the pdf file.</p>
             </div>
           </div>
