todos los forms en guardianship

--- a/index.html
+++ b/index.html
@@ -314,6 +314,119 @@
           </div>
         </div>
 
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card bg-warning">
+            <div class="card-body text-center">
+              <div class="pdf-section" onclick="openPDF14()">
+                <h2>90 day Checklist case</h2>
+                <p>View of the pdf file.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card bg-warning">
+            <div class="card-body text-center">
+              <div class="pdf-section" onclick="openPDF15()">
+                <h2>90 day Checklist case</h2>
+                <p>View of the pdf file.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card bg-warning">
+            <div class="card-body text-center">
+              <div class="pdf-section" onclick="openPDF16()">
+                <h2>90 day Checklist case</h2>
+                <p>View of the pdf file.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card bg-warning">
+            <div class="card-body text-center">
+              <div class="pdf-section" onclick="openPDF17()">
+                <h2>90 day Checklist case</h2>
+                <p>View of the pdf file.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card bg-warning">
+            <div class="card-body text-center">
+              <div class="pdf-section" onclick="openPDF18()">
+                <h2>90 day Checklist case</h2>
+                <p>View of the pdf file.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card bg-warning">
+            <div class="card-body text-center">
+              <div class="pdf-section" onclick="openPDF19()">
+                <h2>90 day Checklist case</h2>
+                <p>View of the pdf file.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card bg-warning">
+            <div class="card-body text-center">
+              <div class="pdf-section" onclick="openPDF20()">
+                <h2>90 day Checklist case</h2>
+                <p>View of the pdf file.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card bg-warning">
+            <div class="card-body text-center">
+              <div class="pdf-section" onclick="openPDF21()">
+                <h2>90 day Checklist case</h2>
+                <p>View of the pdf file.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card bg-warning">
+            <div class="card-body text-center">
+              <div class="pdf-section" onclick="openPDF22()">
+                <h2>90 day Checklist case</h2>
+                <p>View of the pdf file.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card bg-warning">
+            <div class="card-body text-center">
+              <div class="pdf-section" onclick="openPDF23()">
+                <h2>90 day Checklist case</h2>
+                <p>View of the pdf file.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
   </div>
    
